--- a/Exercices/Exercices.csproj
+++ b/Exercices/Exercices.csproj
@@ -6,6 +6,8 @@
     <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
+
+    <StartupObject>Exercices.ChallengeD.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,10 +17,6 @@
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="ChallengeD\" />
   </ItemGroup>
 
 </Project>
